--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,8 @@
   body {
     @apply bg-gray-100;
   }
-  a {
+  a,
+  button {
     @apply text-blue-700 block text-base;
   }
   h2 {
@@ -22,8 +23,5 @@
   input,
   textarea {
     @apply border rounded px-2 py-1 text-base;
-  }
-  button {
-    @apply bg-gray-500 py-0.5 px-2 rounded shadow-md;
   }
 }
